ubuntu-release-upgrader (1:16.04.13) UNRELEASED; urgency=medium

  * Fix Greek translations of the keys for yes/no.  LP: #1572416.
  * Properly handle the indicated default option on the 'confirm changes'
    prompt.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Thu, 21 Apr 2016 14:46:15 -0700

ubuntu-release-upgrader (1:16.04.12) xenial; urgency=medium

  * DistUpgradeQuirks.py: Fix the quirk which inhibits screensavers.
    (LP: #1570947)

 -- Brian Murray <brian@ubuntu.com>  Fri, 15 Apr 2016 17:11:11 -0700

ubuntu-release-upgrader (1:16.04.11) xenial; urgency=medium

  [ Tim Lunn ]
  * DistUpgradeQuirks.py: add a quirk to add a gnome-session idle inhibitor
    this will fix the screensaver activating on Ubuntu GNOME (LP: #1565177)
    Leave this inhibitor in place on GNOME desktop to workaround broken
    lock screen after upgrade (LP: #1565178).

  [ Brian Murray ]
  * DistUpgrade/ReleaseAnnouncement: provide a link to the release notes of
    the version of Ubuntu to which users are upgrading. (LP: #1535098)

 -- Brian Murray <brian@ubuntu.com>  Thu, 14 Apr 2016 14:45:29 -0700

ubuntu-release-upgrader (1:16.04.10) xenial; urgency=medium

  [ Tim Lunn ]
  * DistUpgrade/DistUpgradeController.py: set a logind sleep inhibitor
  * DistUpgrade/DistUpgradeFetcher{KDE}.py: remove calls to inhibit_sleep
    logind inhibitor will be released when os.exec is called as we lose
    reference on the fd (LP: #1566141)

  [ Brian Murray ]
  * DistUpgrade/DistUpgradeViewKDE.py: Really fix call to showConffile.
    (LP: #1509655)

 -- Brian Murray <brian@ubuntu.com>  Thu, 07 Apr 2016 15:26:25 -0700

ubuntu-release-upgrader (1:16.04.9) xenial; urgency=medium

  [ Mathieu Trudel-Lapierre ]
  * DistUpgrade/DistUpgradeController.py: fix typo in variable name for
    RELEASE_UPGRADER_ALLOW_THIRD_PARTY; this will help running with third-
    party mirrors in sources via just the environment variable for one-shot
    deals.

  [ Brian Murray ]