@@ -3,8 +3,9 @@ ubuntu-release-upgrader (1:16.04.13) UNRELEASED; urgency=medium
   * Fix Greek translations of the keys for yes/no.  LP: #1572416.
   * Properly handle the indicated default option on the 'confirm changes'
     prompt.
+  * DistUpgrade/DistUpgradeQuirks.py: pep8 fixes.
 
- -- Steve Langasek <steve.langasek@ubuntu.com>  Thu, 21 Apr 2016 14:46:15 -0700
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Thu, 21 Apr 2016 16:31:38 -0700
 
 ubuntu-release-upgrader (1:16.04.12) xenial; urgency=medium
 
